# inspi

./: .gcloudignore  .gitignore  Readme.md  app.yaml  blog.json  manage.py  package-lock.json  pyproject.toml  requirements.txt  settings.json  setup.sh  tailwind.config.js
activity/: apps.py  sitemaps.py  urls.py
activity/activity/: admin.py  apps.py  choices.py  forms.py  models.py  tests.py  urls.py  views.py
activity/event_of_week/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
anmelde_tool/: urls.py
anmelde_tool/attributes/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
anmelde_tool/email_services/: admin.py  apps.py  models.py  services.py  urls.py  views.py
anmelde_tool/registration/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
blog/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_overview.py  0002_author_display_name.py  0003_comment.py  0004_alter_comment_content_alter_post_content.py  0005_alter_post_author_delete_author.py  0006_alter_category_subtitle.py  0007_alter_category_thumbnail.py  0008_rename_timestamp_post_timestamp_created_and_more.py  0009_alter_post_thumbnail.py
blog/templates/: blog-home.html  blog-start.html  post-box.html  post-create.html  post-dashboard.html  post-list.html  post-update.html  post.html  post_box.html  post_create.html  post_dashboard.html
components/action_box/: action_box.html  action_box.py
components/big_action_box/: big_action_box.html  big_action_box.py
components/delete_modal/: delete_modal.html  delete_modal.py
components/delete_model/: delete_model.html  delete_model.py
components/icon/: icon.html  icon.py
components/icon_button/: icon_button.html  icon_button.py
data/: collect_data.ipynb  sql_to_json.ipynb
event/: urls.py
food/: admin.py  apps.py  choices.py  forms.py  models.py  signals.py  urls.py  views.py
general/: apps.py  urls.py
group/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
inspiapp/: asgi.py  context_processors.py  example.env  settings.py  urls.py  views.py  wsgi.py
inspitheme/: apps.py
masterdata/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py  widgets.py
notebooks/: rewe_crawler.ipynb
templates/: 403.html  _base.html  _base_bread.html  filter-modal.html  footer.html  form_snipper.html  index.html  main_header.html  messages.html  search-filter-bar.html
(+752 files in other folders)
