[tool.poetry]
name = "inspiapp"
version = "0.1.0"
description = ""
authors = ["Robert <robertbaggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-compressor = "^4.4"
django-stdimage = "^6.0.2"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-pictures = "^1.3.1"
reportlab = "^4.2.0"
django-colorfield = "^0.11.0"
django-ckeditor = "^6.7.1"
django-imagekit = "^5.0.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
