[tool.poetry]
name = "inspiapp"
version = "0.1.0"
description = ""
authors = ["Robert <robertbaggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-stdimage = "^6.0.2"
django-filter = "^24.2"
django-pictures = "^1.3.1"
reportlab = "^4.2.0"
django-colorfield = "^0.11.0"
django-ckeditor = "^6.7.1"
django-imagekit = "^5.0.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
django-allauth = "^0.63.6"
django-compressor = "^4.5"
config = "^0.5.1"
django-widget-tweaks = "^1.5.0"
crispy-bootstrap4 = "^2024.1"
crispy-tailwind = "^1.0.3"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
