[tool.poetry]
name = "inspiapp"
version = "0.1.0"
description = ""
authors = ["Robert <robertbaggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-filter = "^24.2"
django-pictures = "^1.3.1"
django-colorfield = "^0.11.0"
django-ckeditor = "^6.7.1"
django-imagekit = "^5.0.0"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
django-allauth = "^0.63.6"
django-compressor = "^4.5"
config = "^0.5.1"
django-widget-tweaks = "^1.5.0"
crispy-bootstrap4 = "^2024.1"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"
django-mathfilters = "^1.0.0"
django-formtools = "^2.5.1"
django-image-cropping = "^1.7"
google-cloud-secret-manager = "^2.21.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
cairosvg = "^2.7.1"
instructor = {extras = ["google-generativeai"], version = "^1.7.0"}
openai = "^1.57.0"
pydantic = "^2.10.3"
google-generativeai = "^0.8.3"
jsonref = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
